# neurons

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  Jenkinsfile  README.md  build.gradle  compose.yaml  settings.gradle
worker/: .dockerignore  Dockerfile  Dockerfile.mcp-http  Dockerfile.permission-audit-store  Dockerfile.session-memory  Dockerfile.tools  README.md  pyproject.toml
worker/deploy/session-memory/: backfill.py  build-once.sh  compose.yaml  entrypoint.sh  gc-run.py
worker/docs/qdrant-readiness/: 00-README.md  01-index-dependency-audit.md  01-ragflow-dependency-audit.md  02-collection-schema-metadata-mapping.md  03-embedding-ownership-and-lifecycle.md  04-cutover-gates-and-rollback.md  05-index-mirror-retirement-preconditions.md  05-ragflow-mirror-retirement-preconditions.md
worker/eval/: demo_cohort.py  gate_measure.py  golden_grader.py  ledger_area_boundaries.py  ledger_seam_invariants.py  llm_brain_core_package_depth.py
worker/eval/golden/: neurons.golden.draft.json
worker/lib/agent_knowledge/: backfill.py  cli.py  curation.py  dataset_contract.py  db_adapter.py  document_envelope.py  events.py  index_client.py  knowledge_search_service.py  ledger.py  ledger_areas.py  ledger_base.py  ledger_gc_safety_mixin.py  ledger_ingress_mixin.py  ledger_memory_promotion_area.py  ledger_memory_promotion_mixin.py  ledger_native_memory_mixin.py  ledger_pg_migrate.py  mcp_http_server.py  mcp_jsonrpc.py  mcp_server.py  mcp_tools.py  memory_card.py  memory_miner.py  memory_read_pipeline.py  memory_regeneration.py  native_exact_mutation_markers.py  permission_audit.py  permission_audit_contract.py  permission_audit_marker_runtime.py  permission_audit_marker_runtime_env.py  permission_audit_store.py  pg_paramstyle.py  postgres_db_adapter.py  postgres_exact_mutation_marker.py  product_marker_activation_cli.py  production_authority_permission.py  public_safe_util.py  qdrant_write_gateway.py  qdrant_write_gateway_http.py  (+17 more)
worker/lib/agent_knowledge/couchdb_source/: __init__.py  build_cli.py  couchdb_http_store.py  document_model.py  historical_import.py  index_fallback.py  index_projector.py  migration_cli.py  migration_flow_cli.py  project_authority.py  ragflow_fallback.py  ragflow_projector.py  retention.py  retirement_verifier.py  session_memory_materializer.py  shadow_cutover.py  source_store.py  tool_evidence_bundler.py
worker/lib/agent_knowledge/llm_brain_core/: __init__.py  _util.py  artifact_store.py  authority_bundle.py  authority_projection.py  bulk_semantic.py  bulk_semantic_cli.py  bulk_semantic_trigger_cli.py  central_federation.py  cli.py  context.py  context_builder.py  couchdb_projection_cli.py  document_authority.py  document_bridge.py  event_replay.py  extraction_pipeline.py  golden_query_eval.py  graph.py  graph_projection_status_cli.py  graph_trigger_cli.py  graphiti_adapter.py  graphiti_backend.py  hybrid_graph.py  infra_baseline.py  knowledge_objects.py  ledger_adapter.py  local_brain.py  local_evidence.py  models.py  object_cli.py  object_packs.py  okf_export.py  ontology.py  portable.py  portable_cli.py  preference_authority.py  projection.py  projection_cli.py  reference_corpus.py  (+8 more)
worker/lib/agent_knowledge/model_connectors/: __init__.py  env.py  graphiti_components.py  openai_compatible.py  policy.py  reranker.py  specs.py  structured_response.py
worker/lib/agent_knowledge/rag_ingress/: __init__.py  backfill.py  backfill_apply.py  couchdb_delivery_backend.py  couchdb_index_backend.py  couchdb_retired_index_bridge.py  delivery_backend.py  delivery_drain.py  delivery_executor.py  delivery_reconcile.py  domain_state.py  file_ingest.py  idempotency.py  index_backend.py  ingress_journal.py  product_surface_switch_plan.py  projection_invalidation_canary.py  qdrant_authority_join.py  qdrant_backfill.py  qdrant_backfill_cli.py  qdrant_backfill_parity.py  qdrant_couchdb_authority.py  qdrant_docling_mirror.py  qdrant_docling_testing.py  qdrant_dual_write.py  qdrant_embedding.py  qdrant_read_compare.py  qdrant_recall.py  qdrant_rerank.py  rag_ready_document.py  replay_delivery.py  retired_index_bridge.py  retirement_readiness.py  server_runtime.py  shadow_worker.py  state_cli.py  state_db.py  state_shadow_readiness.py  state_sink.py  temporal_metadata_backfill.py  (+1 more)
worker/lib/agent_knowledge/session_memory/: __init__.py  autopilot_cli.py  autopilot_loop.py  backfill.py  brain_query.py  brain_read_model.py  brain_steward.py  chunk_overlap.py  cleanup_readiness.py  curation.py  dirty_session_memory_sync.py  eval_cli.py  eval_loop.py  eval_notify_discord.py  eval_readiness.py  extraction_llm.py  gc_backup.py  gc_safety_auditor.py  index_projection.py  llm_brain_miner.py  llm_brain_service.py  memory_card.py  memory_evaluation.py  (+33 more)
worker/tests/: object_query_route_cases.py  test_adversarial_mcp.py  test_agent_context_consumer.py  test_artifact_preference_evaluator.py  test_authority_markdown_bundle.py  test_autopilot_accept_guard.py  test_autopilot_cli.py  test_autopilot_loop.py  test_autopilot_no_index_client_before_m9.py  test_autopilot_no_ragflow_client_before_m9.py  test_autopilot_supersede.py  test_backend_neutral_index_migration.py  test_brain_event_replay_idempotency.py  test_brain_query.py  test_brain_read_model.py  test_brain_steward.py  test_bulk_semantic_trigger_cli.py  test_central_sync_shadow_rebuild.py  test_chunk_overlap.py  test_cleanup_readiness.py  test_context_authority_pack.py  test_context_authority_projection.py  test_context_pack_builder.py  test_contextpack_no_raw_source_refs.py  test_couchdb_build_cli.py  test_couchdb_delivery_backend.py  test_couchdb_graph_bulk_semantic_cli.py  test_couchdb_graph_projection_cli.py  test_couchdb_historical_import.py  test_couchdb_http_store.py  test_couchdb_index_backend.py  test_couchdb_index_fallback.py  test_couchdb_index_projector.py  test_couchdb_migration_cli.py  test_couchdb_migration_flow_cli.py  test_couchdb_project_authority.py  test_couchdb_projection_invalidation_canary.py  test_couchdb_ragflow_fallback.py  test_couchdb_ragflow_projector.py  test_couchdb_retention.py  (+179 more)
(+352 files in other folders)
